k8s/postgres-deploymnet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deploymnet
spec:
  replicas: 1
  selector:
   matchLabels:
    component: postgres
  template:
   metadata:
    labels:
     component: postgres
   spec:
     containers:
       - name: postgres
         image: postgres
         ports: 
          - containerPort: 5432
